# flutter_fiddle

./: .clangd  .gitignore  README.md  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/extension_discovery/: vs_code.json
.dart_tool/flutter_build/51222152f191d592c9eeac0c72462a45/: .filecache  aot_elf_release.stamp  dart_build.d  dart_build.stamp  flutter_assets.d  gen_dart_plugin_registrant.stamp  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  outputs.json  release_bundle_windows-x64_assets.stamp  unpack_windows.stamp  windows_aot_bundle.stamp  windows_engine_sources.d
.dart_tool/flutter_build/79b311a3f0efdbd953e374068f1334ce/: .filecache  dart_build.d  dart_build.stamp  debug_bundle_windows-x64_assets.stamp  flutter_assets.d  install_code_assets.d  install_code_assets.stamp  kernel_snapshot_program.d  kernel_snapshot_program.stamp  outputs.json  unpack_windows.stamp  windows_engine_sources.d
android/app/: build.gradle.kts
client/: .clangd  .gitignore  pubspec.yaml
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/kotlin/com/example/dart_pcm/: MainActivity.kt
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: main.dart  soundtouch.dart
client/lib/api/: server.dart
client/lib/audio/: audio_manager.dart
client/lib/audio_player/: ffmpeg_audio.dart  queue_manager.dart  song_model.dart
client/lib/bindings/: native_audio_bindings.dart
client/lib/ui/: audio_button.dart  audio_player.dart  queue_song_item.dart  song_item.dart  song_search.dart
client/lib/utils/: audio_utils.dart
client/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
client/macos/Runner/Configs/: AppInfo.xcconfig
client/native/: CMakeLists.txt
client/native/soundtouch_bridge/: soundtouch_bridge.cpp  soundtouch_bridge.h
client/web/: index.html  manifest.json
client/windows/: CMakeLists.txt
client/windows/runner/: CMakeLists.txt  Runner.rc
ios/Runner/: Info.plist
lib/: main.dart  soundtouch.dart  soundtouch_bindings.dart
lib/bindings/: native_audio_bindings.dart
lib/native/: soundtouch.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
native/: CMakeLists.txt  bridge.cpp
native/demucs_bridge/: README.md  demucs_bridge.cpp  demucs_bridge.h  test_demucs.cpp
native/demucs_bridge/test/: CMakeLists.txt  README.md  demucs_test.cpp
native/soundtouch_bridge/: README.md  soundtouch_bridge.cpp  soundtouch_bridge.h  soundtouch_bridge.hpp
server/: README.md  package.json  pnpm-lock.yaml
server/src/: db.ts  index.ts
windows/runner/: CMakeLists.txt  main.cpp
